<resources>
    <string name="app_name">Home Security Control</string>

    <string name="arm_away">Arm (Away)</string>

    <string name="first_refresh_message">You can press this button or pull down to connect to alarm</string>
    <string name="first_settings_message">You can set your alarm IP address, password, pin, and configure other options in the settings</string>

    <string name="unable_to_login_message">This is most likely due to an incorrect password. Please verify your password is correct.</string>
    <string name="connection_reset_message">The alarm reset the connection. Please try again.</string>
    <string name="connection_timeout_message">Unable to connect to alarm. Please ensure you are connected to the same network as your alarm, and the IP address is correct.</string>
    <string name="no_ip_message">You currently have no IP address for your alarm set. Please go to settings and set an IP address.</string>

    <string name="alarm_away_message">You may exit now</string>
    <string name="connecting_message">Connecting...</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ip_address">IP Address</string>
    <string name="key_ip_address">key_ip_address</string>

    <string name="password">Password</string>
    <string name="key_password">key_password</string>

    <string name="pin">Pin</string>
    <string name="key_pin">key_pin</string>

    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Automatically attempt to connect to alarm when app is launched</string>
    <string name="key_auto_connect">key_auto_connect</string>

    <string name="connection_attempts_title">Number of Connection Attempts</string>
    <string name="connection_attempts_summary_singular">connection attempt before timeout</string>
    <string name="connection_attempts_summary_plural">consecutive connection attempts before timeout</string>
    <string name="key_connection_attempts">key_connection_attempts</string>

    <string name="welcome_text">Welcome to Home Security Control</string>



    <string name="show_arm_away">Show Arm (Away) Button</string>
    <string name="key_show_arm_away">key_show_arm_away</string>

    <string name="theme">Theme</string>
    <string name="key_theme">key_theme</string>

    <string name="key_first_launch">key_first_launch</string>


    <string name="pref_header_about">About</string>
    <string name="about_summary">Created by Alex Nainer. Made in Canada</string>
    <string name="title_version">Version</string>
    <string name="app_version">1.0_internal</string>


</resources>
