<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_below="@+id/toolbarSettings">


    <PreferenceCategory android:title="Alarm Settings">
        <EditTextPreference
            android:key="@string/key_ip_address"

            android:title="@string/ip_address" />

        <EditTextPreference
            android:key="@string/key_password"
            android:title="@string/password"
            android:summary="Same password used for Envisalink's local page"
            android:inputType="textPassword" />

        <EditTextPreference
            android:key="@string/key_pin"
            android:title="@string/pin"
            android:summary="Pin used to enter commands"
            android:inputType="numberPassword" />



        <!--
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />
        -->
    </PreferenceCategory>

<!--
    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>
-->

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="Made in Canada 🇨🇦" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />


    </PreferenceCategory>
</PreferenceScreen>